--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "mongoose": "^6.4.5",
     "next": "12.2.0",
+    "next-auth": "^4.10.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
