--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.0.4",
     "axios": "^0.27.2",
+    "mongodb": "^4.8.0",
     "mongoose": "^6.4.5",
     "next": "12.2.0",
     "next-auth": "^4.10.2",
